Improved Lombok usage and Parametrized Unit-tests.